made the drop downs on the navbar work and sorted a few more layout issues

--- a/SCSS/Partials/_footer.scss
+++ b/SCSS/Partials/_footer.scss
@@ -36,7 +36,7 @@ footer {
     
 }
 
-h4 {
+.footer-info h4 {
     margin: 0 0 1.625rem;
     font-weight: 200;
     text-transform: uppercase;
