--- a/SCSS/Partials/_infocards.scss
+++ b/SCSS/Partials/_infocards.scss
@@ -58,7 +58,7 @@
     width: 13rem;
 }
 
-span {
+.cards span {
     height: 0.1875rem;
     width: 1.75rem;
     margin: auto;
