--- a/SCSS/Partials/_navbar.scss
+++ b/SCSS/Partials/_navbar.scss
@@ -2,6 +2,7 @@
     background-color: $darkgrey;
     display: block;
     height: 6.35rem;
+    position: relative;
 }
 
 .Main-nav a {
@@ -10,7 +11,6 @@
     text-align: center;
     line-height: 1;
     padding: 1.1875rem 0 1.125rem;
-    width: 12.5rem;
 }
 
 .Main-nav .container {
@@ -21,10 +21,12 @@
 
 .navbar-nav {
     display: flex;
+    justify-content: space-evenly;
     text-transform: uppercase;
+    width: 73.125rem;
     padding: 0;
-    border-right: 0.0625rem solid rgba(0,0,0,0.25);
-    border-left: 0.0625rem solid rgba(255,255,255,0.1);
+    border-right: 0.0625rem solid rgba(0, 0, 0, 0.25);
+    border-left: 0.0625rem solid rgba(255, 255, 255, 0.1);
 }
 
 
@@ -35,13 +37,12 @@
 .software,
 .marketing,
 .security {
-    border-right: 0.0625rem solid rgba(255,255,255,0.1);
-    border-left: 0.0625rem solid rgba(0,0,0,0.25);
-    width: 12.5rem;
+    border-right: 0.0625rem solid rgba(255, 255, 255, 0.1);
+    border-left: 0.0625rem solid rgba(0, 0, 0, 0.25);
+    width: 12.1875rem;
 }
 
-.nav-link { 
-    width: 12.5rem;
+.nav-link {
     color: $white;
 }
 
@@ -62,7 +63,58 @@
 }
 
 .nav-menu {
+    position: absolute;
+    left: 22.84375rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    text-transform: uppercase;
+    font-size: 1rem;
+    height: 2.8125rem;
+    width: 73.125rem;
+    color: $white;
+    margin: 0 auto;
+
+    li:not(:first-child) {
+        padding-left: 30px;
+    }
+}
+
+.strip {
     display: none;
+    width: 100%;
+    height: 2.8125rem;
+    left: 0;
+}
+
+.web .nav-menu,
+.web .strip {
+    background-color: $purple;
+}
+
+.IT .nav-menu,
+.IT .strip {
+    background-color: $blue;
+}
+
+.telecoms .nav-menu,
+.telecoms .strip {
+    background-color: $darkred;
+}
+
+.software .nav-menu,
+.software .strip {
+    background-color: $darksteelblue;
+}
+
+.marketing .nav-menu,
+.marketing .strip {
+    background-color: $green;
+}
+
+.security .nav-menu,
+.security .strip {
+    background-color: $darkrose;
 }
 
 // Nav button icon colours //
@@ -95,42 +147,89 @@
 
 .web:hover {
     background-color: $lightpurple;
+    border-right: 0.0625rem solid $lightpurple;
+    border-left: 0.0625rem solid $lightpurple;
     i {
         color: $white;
+    }
+    .strip {
+        display: flex;
+        justify-content: center;
+        position: absolute;
     }
 }
 
 .IT:hover {
     background-color: $lightblue;
+    border-right: 0.0625rem solid $lightblue;
+    border-left: 0.0625rem solid $lightblue;
+
     i {
         color: $white;
+    }
+    .strip {
+        display: flex;
+        justify-content: center;
+        position: absolute;
     }
 }
 
 .telecoms:hover {
     background-color: $red;
+    border-right: 0.0625rem solid $red;
+    border-left: 0.0625rem solid $red;
+
     i {
         color: $white;
+    }
+    .strip {
+        display: flex;
+        justify-content: center;
+        position: absolute;
     }
 }
 
 .software:hover {
     background-color: $steelblue;
+    border-right: 0.0625rem solid $steelblue;
+    border-left: 0.0625rem solid $steelblue;
+
     i {
         color: $white;
+    }
+    .strip {
+        display: flex;
+        justify-content: center;
+        position: absolute;
     }
 }
 
 .marketing:hover {
     background-color: $lightgreen;
+    border-right: 0.0625rem solid $lightgreen;
+    border-left: 0.0625rem solid $lightgreen;
+
     i {
         color: $white;
+    }
+    .strip {
+        display: flex;
+        justify-content: center;
+        position: absolute;
     }
 }
 
 .security:hover {
     background-color: $rose;
+    border-right: 0.0625rem solid $rose;
+    border-left: 0.0625rem solid $rose;
+
     i {
         color: $white;
+    }
+    .strip {
+        display: flex;
+        justify-content: center;
+        position: absolute;
     }
 }
